# simpleFileManager

./: .gitignore  CMakeLists.txt  FileSys.c  FileSys.h  README.md  Stack.h  main.c  main.h
lib/: FileSys.c  FileSys.h  Stack.c  utils.c  utils.h
lib/zvector/src/: zvector.c  zvector_config.h
src/: main.c  main.h
